--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -12,14 +12,14 @@
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.badge {
+/* .badge {
   color: #fff !important;
   border-radius: 0.125rem;
   background-color: var(--global-hover-color)  !important;
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%),
     0 2px 10px 0 rgb(0 0 0 / 12%);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-}
+} */
 
 .oral-badge {
   color: #fff !important;
