--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -12,14 +12,14 @@
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-/* .badge {
-  color: #fff !important;
+.badge {
+  color: #000 !important;
   border-radius: 0.125rem;
   background-color: var(--global-hover-color)  !important;
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%),
     0 2px 10px 0 rgb(0 0 0 / 12%);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-} */
+} 
 
 .oral-badge {
   color: #fff !important;
@@ -46,7 +46,7 @@
   --global-text-color: #000000;
   --global-text-color-light: #828282;
   --global-theme-color: #88c0b5;
-  --global-hover-color: #f3ce99;
+  --global-hover-color: #b22222;
   --global-footer-bg-color: #1c1c1c;
   --global-footer-text-color: #e8e8e8;
   --global-footer-link-color: #ffffff;
