--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -46,7 +46,7 @@
   --global-text-color: #000000;
   --global-text-color-light: #828282;
   --global-theme-color: #88c0b5;
-  --global-hover-color: #b22222;
+  --global-hover-color: #e62222;
   --global-footer-bg-color: #1c1c1c;
   --global-footer-text-color: #e8e8e8;
   --global-footer-link-color: #ffffff;
