--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -1,7 +1,7 @@
 .badge {
   display: inline-block;
   padding: 0.25em 0.4em;
-  font-size: 75%;
+  font-size: 95%;
   font-weight: 700;
   line-height: 1;
   text-align: center;
@@ -13,7 +13,7 @@
 }
 
 .badge {
-  color: #000 !important;
+  color: #fff !important;
   border-radius: 0.125rem;
   background-color: var(--global-hover-color)  !important;
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%),
