--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -3,6 +3,7 @@
   padding: 0.25em 0.4em;
   font-size: 95%;
   font-weight: 700;
+  color: #fff ;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
