--- a/assets/css/pub.css
+++ b/assets/css/pub.css
@@ -3,7 +3,6 @@
   padding: 0.25em 0.4em;
   font-size: 95%;
   font-weight: 700;
-  color: #fff ;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
@@ -47,7 +46,7 @@
   --global-text-color: #000000;
   --global-text-color-light: #828282;
   --global-theme-color: #88c0b5;
-  --global-hover-color: #e62222;
+  --global-hover-color: #f3ce99;
   --global-footer-bg-color: #1c1c1c;
   --global-footer-text-color: #e8e8e8;
   --global-footer-link-color: #ffffff;
