--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -107,7 +107,11 @@
         <br>
         <email>{{ site.email2 }}</email>
         {% endif %}
-        
+<br>
+<div style="width:250px; margin: 0 auto;">
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qu8gkkCvCmzwXi5n8L-ufboVe2H3B6cKwvK1g8_VEt0&cl=ffffff&w=a"></script>
+</div>
+<br>
         <br>
         <br>
         <div class="social-icons">
@@ -143,15 +147,6 @@
         </div>
         <br>
 
-        <!-- 访问地图 - 添加在个人信息下方 -->
-        {% if site.clustrmaps_id %}
-        <br>
-        <div style="width:200px; margin: 0 auto;">
-          <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=043361&w=200&t=n&d={{ site.clustrmaps_id }}&co=ffffff&cmo=3eb7f0&ct=043361'></script>
-        </div>
-        <br>
-        {% endif %}
-
       </header>
       <section>
 
@@ -179,6 +174,11 @@
       {% endif %}
 
       <br>
+      {% if site.clustrmaps_id %}
+      <div style="width:100px; pointer-events: none;">
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=043361&w=153&t=n&d={{ site.clustrmaps_id }}&co=ffffff&cmo=3eb7f0&ct=043361'></script>
+      </div>
+      {% endif %}
       
       </section>
       <footer>
